# code

./: .gitignore  .hgignore  CITATION.cff  ChangeLog.txt  MANIFEST.in  PyControl.py  README.md  State_machine.py  __main__.py  env.yml  examples.py  hardware.py  hardware_i.py  pyControl.py  pyControl_GUI.py  pyControl_GUI.pyw  pyproject.toml  readme.txt  script.py  script_button.py  script_two_step.py  script_two_step_i.py  setup.py  state_machine.py  state_machine_i.py  two_step.py  utility.py
CLI/: __init__.py  default_paths.py  experiment.py  pycboard.py  pycboards.py  run_experiment.py
api/: api.py  api_base.py
api_classes/: Example_user_class.py
cli/: __init__.py  default_paths.py  experiment.py  pyboard.py  pycboard.py  pycboards.py  run_experiment.py  run_task.py
com/: data_logger.py  pyboard.py  pycboard.py  pycboards.py
communication/: data_logger.py  pycboard.py
config/: .gitignore  config.py  experiments.py  gui_settings.py  hardware_definition.py  paths.py  settings.py
controls_dialogs/: example_blinker_gui_from_py.py
data/: .gitignore  data_import.py  readme.txt
devices/: LED_driver.py  MCP.py  _LED_driver.py  _MCP.py  __init__.py  _audio_board.py  _audio_player.py  _audio_poke.py  _breakout_1_0.py  _breakout_1_1.py  _breakout_1_2.py  _devboard_1_0.py  _double_poke.py  _load_cells.py  _nine_poke.py  _poke.py  _quad_poke.py  _rotary_encoder.py  _six_poke.py  _stepper_motor.py  _twin_poke.py  analog_LED.py  audio_board.py  audio_player.py  breakout_1_0.py  breakout_1_2.py  five_poke.py  frame_logger.py  frame_trigger.py  grid_maze.py  poke.py  (+9 more)
(+275 files in other folders)
