[project]
name = "pycontrol_behavior"
version = "2.0.0rc1"
authors = [{ name = "Thomas Akam", email = "thomas.akam@psy.ox.ac.uk" }]
description = "Behavior experiment control"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy", "pyserial", "PyQt6", "pyqtgraph", "scipy"]

[project.urls]
"Homepage" = "https://pycontrol.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/pyControl/code"
"Bug Tracker" = "https://github.com/pyControl/code/issues"
"Changelog" = "https://pycontrol.readthedocs.io/en/latest/about/release-notes/"
"Community" = "https://github.com/orgs/pyControl/discussions"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.gui-scripts]
pycontrol_run = "pycontrol_behavior:run"
pycontrol_init = "pycontrol_behavior:init"

[tool.setuptools.package-data]
"*" = ["*.svg"] 

[tool.black]
line-length = 120
